# Trans-Hub

./: .env.example  .flake8  .gitignore  .importlinter  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_DRAFT.md  RELEASE_SOP.md  ROADMAP.md  check_db.py  check_env.py  context_demo.py  cspell.json  demo_complex_workflow.py  docs_merged.txt  inspect_db.py  main.py  mypy_errors.txt  presentation.html  pyproject.toml  refactor_project_final.py  ruff.toml  run_coordinator_test.py  test_sphinx_design.py  test_sphinx_intl.py  test_translation.py  transhub_coord_test.db  transhub_core_test.db  transhub_gc_test.db  transhub_openai_test.db  transhub_ratelimit_test.db  transhub_retry_test.db  transhub_test.db
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
_archive_DO_NOT_USE/: .readthedocs.yaml  alembic.ini
_archive_DO_NOT_USE/.trae/rules/: project_rules.md
_archive_DO_NOT_USE/alembic/: env.py
_archive_DO_NOT_USE/docs/: README.md
_archive_DO_NOT_USE/examples/: 02_contextual_translation.py  05_batch_processing_and_concurrency.py  06_integration_with_file_system.py
_archive_DO_NOT_USE/tests/: __init__.py
_archive_DO_NOT_USE/tests/helpers/: __init__.py  lifecycle.py
_archive_DO_NOT_USE/tests/integration/: conftest.py
_archive_DO_NOT_USE/tools/: clear_database.py  drop_tables.py
_archive_DO_NOT_USE/tools/diag/: diag_import.py  simple_config_test.py  simple_db_test.py  simple_env_test.py
_archive_DO_NOT_USE/trans_hub/: __init__.py
_archive_DO_NOT_USE/trans_hub/_uida/: __init__.py
_archive_DO_NOT_USE/trans_hub/cli/: gc.py
_archive_DO_NOT_USE/trans_hub/core/: __init__.py
_archive_DO_NOT_USE/trans_hub/engines/: debug.py
alembic/: env.py
alembic/versions/: 3f8b9e6a0c2c_initial_schema.py
cachetools/: __init__.py
docs/: CHANGELOG.md  CONTRIBUTING.md  INDEX.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_SOP.md  ROADMAP.md  _STRUCTURE.rst  build_docs.sh  cli_reference.rst  conf.py  configuration.rst  cookbook.md  developing-engines.md  getting_started.rst  index.rst  make.bat  requirements.txt  technical-specification-v1.1.md  trans-hub-core-design.md
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/gettext/: README.pot  index.pot
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html_en/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html_zh/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: config.rst  coordinator.md  coordinator.rst  core_exceptions.rst  core_types.md  core_types.rst  engines.rst  exceptions.rst  index.rst  persistence.rst  persistence_handler.md  types.rst
docs/architecture/: 01_overview.md  02_data_model.md
docs/contributing/: developing_engines.md
docs/en/: INDEX.md
docs/en/api/: coordinator.md  core_types.md  persistence_handler.md
docs/en/architecture/: 01_overview.md  02_data_model.md
docs/en/contributing/: developing_engines.md
docs/en/guides/: 01_quickstart.md  02_advanced_usage.md  03_configuration.md  04_deployment.md
docs/guides/: 01_quickstart.md  02_advanced_usage.md  advanced_usage.rst  architecture.rst  creating_an_engine.rst  data_model.rst  deployment.rst  multilingual_support.rst  testing_strategy.rst
docs/source/: conf.py  index.rst
docs_old/: conf.py
docs_old/zh/: INDEX.md
examples/: 01_basic_usage.py  01_core_workflow.py  02_contextual_translation.py  02_real_world_simulation.py  03_specific_use_case_strings_file.py  03_structured_payload.py  04_error_handling_and_dlq.py  04_logging_showcase.py  05_batch_processing_and_concurrency.py  06_integration_with_file_system.py  07_real_world_simulation.py  demo_complex_workflow.py  translate_strings_file.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
questionary/: __init__.py
rich/: __init__.py  console.py  table.py
scripts/: __init__.py  check_test_environment.py  generate_snapshot.py  lint_check.py
structlog/: __init__.py
temp/: 3f8b9e6a0c2c_initial_schema.py
temp/versions/: 0002_create_core_tables.py
tests/: __init__.py  conftest.py  run_coordinator_test.py  test_main.py
tests/diag/: check_env.py
tests/helpers/: __init__.py  factories.py  lifecycle.py
tests/integration/: __init__.py  conftest.py  test_coordinator_e2e.py  test_coordinator_uida.py  test_persistence_postgres.py  test_persistence_uida.py
tests/unit/: __init__.py  test_cache.py  test_cli.py  test_persistence.py  test_policies.py  test_rate_limiter.py  test_utils.py
tools/: __init__.py  app_inspect_db.py  check_translation_status.py  clear_database.py  db_doctor.py  doc_merger.py  drop_tables.py  generate_project_snapshot.py  inspect_db.py  rebuild_tests.py
tools/diag/: check_env.py  diag_import.py  simple_asyncpg_test.py  simple_config_test.py  simple_db_test.py  simple_env_test.py  test_db_connection.py  verify_api.py
tools/doc_translator/: README.md  main_cli.py  models.py  parser.py  publisher.py  renderer.py  scanner.py  synchronizer.py  test_doc.md  test_parser.py
trans_hub/: __init__.py  cache.py  cli.py  cli_main.py  config.py  context.py  coordinator.py  engine_registry.py  exceptions.py  interfaces.py  logging_config.py  optimized_logging_config.py  persistence.py  policies.py  rate_limiter.py  types.py  utils.py
trans_hub/_tm/: __init__.py  namespace_registry.json  normalizers.py
trans_hub/_uida/: __init__.py  encoder.py  reuse_key.py
trans_hub/cli/: __init__.py  db.py  gc.py  main.py  request.py  state.py  status.py  utils.py  worker.py
trans_hub/core/: __init__.py  interfaces.py  types.py
trans_hub/db/: schema.py  schema_manager.py
trans_hub/engines/: base.py  debug.py  meta.py  openai.py  translators_engine.py
trans_hub/persistence/: __init__.py  base.py  postgres.py  sqlite.py  utils.py
trans_hub/policies/: __init__.py  processing.py
typer/: __init__.py
(+152 files in other folders)
