[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trans-hub"
version = "3.0.0.dev0" 
description = "一个可嵌入的、带持久化存储的智能本地化（i18n）后端引擎。"
authors = ["Saken <saken.w@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SakenW/trans-hub"
repository = "https://github.com/SakenW/trans-hub"
documentation = "https://github.com/SakenW/trans-hub/blob/main/docs/INDEX.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.scripts]
trans-hub = "trans_hub.cli:app"

# --- 核心依赖 (保持最精简) ---
[tool.poetry.dependencies]
python = ">=3.9, <3.14"
pydantic = "^2.0"
structlog = "^23.0"
pydantic-settings = "^2.0"
aiosqlite = "^0.20.0"
cachetools = "^5.3.3"

# --- 可选功能与工具依赖 ---
# 翻译引擎
translators = { version = ">=6.0.1", optional = true }
openai = { version = ">=1.37.0", optional = true }
httpx = { version = ">=0.28.1", optional = true } 
# 指标
prometheus-client = { version = ">=0.20.0", optional = true }
# 应用层 (CLI, API)

typer = { version = ">=0.12.3", optional = true }
rich = { version = ">=13.0.0", optional = true }
fastapi = { version = ">=0.111.0", optional = true }
uvicorn = { version = ">=0.30.1", extras = ["standard"], optional = true }
# 文档工具
docutils = { version = "<0.21", optional = true }  # 修复 RTD 构建问题
markdown-it-py = { version = ">=3.0.0", optional = true }


# --- 可选依赖分组 (Extras) ---
questionary = "2.1.0"
[tool.poetry.extras]
translators = ["translators"]
openai = ["openai", "httpx"]
metrics = ["prometheus-client"]
cli = ["typer", "rich", "questionary"]
api = ["fastapi", "uvicorn"]
tools = ["typer", "rich", "markdown-it-py", "openai", "httpx", "questionary"]
all = [
    "translators", "openai", "httpx", "prometheus-client", 
    "typer", "rich", "fastapi", "uvicorn", "markdown-it-py", "questionary",
    "sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "docutils"
]

# --- 依赖组 ---
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
docutils = "<0.21"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
sphinx-togglebutton = "^0.3.2"
sphinx-prompt = { version = "^1.8.0", python = ">=3.10" }
sphinx-tabs = "^3.4.7"
sphinxcontrib-mermaid = "^1.0.0"
myst_parser = "^2.0.0"
sphinx-intl = "^2.3.1"


# --- 开发依赖 ---
[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
mypy = ">=1.5"
pytest = ">=7.4"
pytest-cov = ">=4.1"
pytest-asyncio = ">=0.21.0"
types-cachetools = ">=5.3.1"
# --- 核心修正：移除不存在的 types-uuid 包 ---

# 开发环境直接安装所有可选依赖
translators = "*"
openai = "*"
httpx = "*"
prometheus-client = "*"
typer = { version = "*", extras = ["rich"] }
fastapi = "*"
uvicorn = { version = "*", extras = ["standard"] }
markdown-it-py = "*"
pytest-mock = "^3.14.1"


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "C4", "A", "ASYNC"]
ignore = [
    "E501", 
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D400", "D401", "D415", "D203", "D212", "D205",
    "UP007",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "translators",
    "markdown_it",
    "prometheus_client",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"